src/test/compile-fail/bad-main.rs
// error-pattern:expecting `extern fn(~[str])

fn main(x: int) { }
